--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
         "itsgoingd/clockwork": "^5.1.12",
         "laravel/framework": "^10.17.1",
         "laravel/sanctum": "^3.2.5",
-        "laravel/tinker": "^2.8.1"
+        "laravel/tinker": "^2.8.1",
+        "livewire/livewire": "^3.0"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23.0",
