--- a/composer.json
+++ b/composer.json
@@ -1,26 +1,26 @@
 {
     "name": "laravel/laravel",
     "type": "project",
-    "description": "The skeleton application for the Laravel framework.",
+    "description": "Demo Application for COM621",
     "keywords": ["laravel", "framework"],
     "license": "MIT",
     "require": {
         "php": "^8.1",
         "guzzlehttp/guzzle": "^7.7",
         "itsgoingd/clockwork": "^5.1.12",
-        "laravel/framework": "^10.17.1",
-        "laravel/sanctum": "^3.2.5",
+        "laravel/framework": "^10.20.0",
+        "laravel/sanctum": "^3.2.6",
         "laravel/tinker": "^2.8.1",
-        "livewire/livewire": "^3.0"
+        "livewire/livewire": "^3.0.1"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23.0",
-        "laravel/pint": "^1.10.5",
-        "laravel/sail": "^1.23.1",
-        "mockery/mockery": "^1.6.4",
-        "nunomaduro/collision": "^7.7.0",
-        "phpunit/phpunit": "^10.2.7",
-        "spatie/laravel-ignition": "^2.2.0"
+        "laravel/pint": "^1.11.0",
+        "laravel/sail": "^1.23.4",
+        "mockery/mockery": "^1.6.6",
+        "nunomaduro/collision": "^7.8.1",
+        "phpunit/phpunit": "^10.3.2",
+        "spatie/laravel-ignition": "^2.3.0"
     },
     "autoload": {
         "psr-4": {
